--- a/cms/part-d_convert_to_feather.ipynb
+++ b/cms/part-d_convert_to_feather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -10,10 +10,10 @@
     {
      "data": {
       "text/plain": [
-       "'data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
+       "'../data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,19 +26,21 @@
     "import shutil # to write the dataset to file\n",
     "import os # rename file to something more type-able\n",
     "\n",
+    "data_dir = '../data/'\n",
+    "\n",
     "url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Information-on-Prescription-Drugs/Downloads/Part_D_All_Drugs_2015.zip'\n",
     "response = requests.get(url, stream=True)\n",
-    "with open('data/dataset.zip', 'wb') as ds_zipout:\n",
+    "with open(data_dir + 'dataset.zip', 'wb') as ds_zipout:\n",
     "    shutil.copyfileobj(response.raw, ds_zipout)\n",
     "\n",
-    "zip = zipfile.ZipFile('data/dataset.zip', 'r')\n",
+    "zip = zipfile.ZipFile(data_dir + 'dataset.zip', 'r')\n",
     "ds_filename = zip.namelist()[0]\n",
-    "zip.extract(ds_filename, path=\"data/\")"
+    "zip.extract(ds_filename, path=data_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,13 +48,13 @@
    "source": [
     "# Read in the raw data file and focus only on the sheet with the data in it\n",
     "from openpyxl import load_workbook\n",
-    "workbook = load_workbook(\"data/\" + ds_filename)\n",
+    "workbook = load_workbook(data_dir + ds_filename)\n",
     "data_sheet = workbook['Data']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -2318,7 +2320,7 @@
        "[4498 rows x 53 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2353,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -2361,12 +2363,12 @@
    "source": [
     "# Serialize drug names to feather file for use in both Python and R\n",
     "import feather\n",
-    "feather.write_dataframe(df_drugnames, 'data/drugnames.feather')"
+    "feather.write_dataframe(df_drugnames, data_dir + 'drugnames.feather')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -2386,7 +2388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -2398,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2424,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -2443,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -2451,7 +2453,7 @@
    "source": [
     "# Serialize data for each year to feather file for use in both Python and R\n",
     "for year in df_years:\n",
-    "    feather.write_dataframe(df_years[year], 'data/spending-' + str(year) + '.feather')"
+    "    feather.write_dataframe(df_years[year], data_dir + 'spending-' + str(year) + '.feather')"
    ]
   }
  ],
