Add Github .md file

--- a/explore_drugspending.Rmd
+++ b/explore_drugspending.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Medicare Drug Spending"
-output: html_notebook
+output:
+  github_document:
+    html_preview: yes
+  html_notebook:
+    code_folding: no
 ---
 
 ```{r setup}
