Forgot to add notebook in last commit

--- a/cms/part-d_convert_to_feather.ipynb
+++ b/cms/part-d_convert_to_feather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
        "'../data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -2320,7 +2320,7 @@
        "[4498 rows x 53 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -2355,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -2383,12 +2383,24 @@
     "    { 'year': 2015, 'start': 42, 'end': 53 },\n",
     "]\n",
     "\n",
-    "df_years = { cols['year']: df.iloc[:, cols['start']:cols['end']] for cols in cols_by_year }"
+    "df_years = {}\n",
+    "\n",
+    "col_brandname = 0\n",
+    "col_genericname = 1\n",
+    "for cols in cols_by_year:\n",
+    "    year, start, end = cols['year'], cols['start'], cols['end']\n",
+    "    \n",
+    "    df_years[year] = pd.concat(\n",
+    "        [\n",
+    "            df.iloc[:, [col_brandname, col_genericname]],\n",
+    "            df.iloc[:, start:end]\n",
+    "        ],\n",
+    "        axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -2400,7 +2412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Drop any rows in each year that have absolutely no data, then reset their row indices\n",
+    "for year in df_years:\n",
+    "    nonnull_rows = df_years[year].iloc[:, 2:].apply(lambda x: x.notnull().any(), axis=1)\n",
+    "    df_years[year] = df_years[year][nonnull_rows]\n",
+    "    df_years[year].index = np.arange(1, len(df_years[year]) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -2408,6 +2435,8 @@
    "source": [
     "# Make columns easier to type and more generic w.r.t. year\n",
     "generic_columns = [\n",
+    "    \"drugname_brand\",\n",
+    "    \"drugname_generic\",\n",
     "    \"claim_count\",\n",
     "    \"total_spending\",\n",
     "    \"user_count\",\n",
@@ -2426,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -2438,14 +2467,15 @@
     "# tripping on the fact that we have a dict of DataFrames\n",
     "pd.options.mode.chained_assignment = None\n",
     "for year in df_years:\n",
-    "    for col in df_years[year].columns:\n",
+    "    # Ignore the first two columns, which are strings and contain drug names\n",
+    "    for col in df_years[year].columns[2:]:\n",
     "        df_years[year].loc[:, col] = pd.to_numeric(df_years[year][col])\n",
     "pd.options.mode.chained_assignment = 'warn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -2473,7 +2503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
