Fix exploration notebook after earlier changes

--- a/cms/part-d_exploration.ipynb
+++ b/cms/part-d_exploration.ipynb
@@ -2,32 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matt/projects/d4d/drug-spending/.env/lib/python3.6/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/Users/matt/projects/d4d/drug-spending/.env/lib/python3.6/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    }
+   ],
    "source": [
     "# Necessary libs\n",
     "import feather # import data from file\n",
     "import pandas as pd, numpy as np # data structures and analysis\n",
     "\n",
-    "# Graphical plotting\n",
-    "import matplotlib\n",
-    "matplotlib.style.use('ggplot') # Pretty style\n",
-    "import matplotlib.pyplot as plt # actual plotting module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Load up drug names data\n",
-    "df_drugnames = feather.read_dataframe('drugnames.feather')"
+    "import matplotlib.pyplot as plt # graphical plotting\n",
+    "plt.style.use('ggplot') # Pretty style"
    ]
   },
   {
@@ -38,28 +35,41 @@
    },
    "outputs": [],
    "source": [
+    "# Load up drug names data\n",
+    "df_drugnames = feather.read_dataframe('../data/drugnames.feather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Load up spending data for each available year\n",
-    "year_file_map = { year: 'spending-' + str(year) + '.feather' for year in range(2011, 2016) }\n",
+    "year_file_map = { year: '../data/spending-' + str(year) + '.feather' for year in range(2011, 2016) }\n",
     "df_years = { year: feather.read_dataframe(year_file_map[year]) for year in year_file_map }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Add drug names as a multi-index\n",
-    "idx = pd.MultiIndex.from_arrays(df_drugnames.iloc[:, [0,1]].values.T, names=df_drugnames.columns.values)\n",
+    "# Set the index of each DataFrame to be drug names, then remove those columns\n",
     "for year in df_years:\n",
-    "    df_years[year].index = idx"
+    "    index_values = df_years[year].iloc[:, :2].values.T\n",
+    "    df_years[year].index = pd.MultiIndex.from_arrays(index_values)\n",
+    "    df_years[year] = df_years[year].iloc[:, 2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +84,7 @@
        "Minor_axis axis: claim_count to out_of_pocket_avg_lowincome"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +105,6 @@
     {
      "data": {
       "text/plain": [
-       "drugname_brand           drugname_generic               \n",
        "LANTUS/LANTUS SOLOSTAR   INSULIN GLARGINE,HUM.REC.ANLOG     $ 14.2B\n",
        "NEXIUM                   ESOMEPRAZOLE MAGNESIUM             $ 11.3B\n",
        "CRESTOR                  ROSUVASTATIN CALCIUM               $ 10.8B\n",
@@ -109,7 +118,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +140,6 @@
     {
      "data": {
       "text/plain": [
-       "drugname_brand              drugname_generic          \n",
        "SIMVASTATIN                 SIMVASTATIN                   181.3M\n",
        "LISINOPRIL                  LISINOPRIL                    181.1M\n",
        "LEVOTHYROXINE SODIUM        LEVOTHYROXINE SODIUM          169.9M\n",
@@ -145,7 +153,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -175,12 +183,6 @@
        "      <th></th>\n",
        "      <th>claim_count</th>\n",
        "      <th>total_spending</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>drugname_brand</th>\n",
-       "      <th>drugname_generic</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -237,7 +239,6 @@
       ],
       "text/plain": [
        "                                                               claim_count  \\\n",
-       "drugname_brand                 drugname_generic                              \n",
        "OMEPRAZOLE                     OMEPRAZOLE                       27360685.0   \n",
        "NEXIUM                         ESOMEPRAZOLE MAGNESIUM            8224024.0   \n",
        "OMEPRAZOLE-SODIUM BICARBONATE  OMEPRAZOLE/SODIUM BICARBONATE       71956.0   \n",
@@ -248,7 +249,6 @@
        "NEXIUM I.V.                    ESOMEPRAZOLE SODIUM                   704.0   \n",
        "\n",
        "                                                               total_spending  \n",
-       "drugname_brand                 drugname_generic                                \n",
        "OMEPRAZOLE                     OMEPRAZOLE                        6.768475e+08  \n",
        "NEXIUM                         ESOMEPRAZOLE MAGNESIUM            1.970138e+09  \n",
        "OMEPRAZOLE-SODIUM BICARBONATE  OMEPRAZOLE/SODIUM BICARBONATE     1.547595e+07  \n",
@@ -259,12 +259,13 @@
        "NEXIUM I.V.                    ESOMEPRAZOLE SODIUM               2.164515e+05  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Find claim counts and total spending in 2011 for all forms of omeprazole (Nexium)\n",
     "all_omeprazoles = ['OMEPRAZOLE' in generic for (brand, generic) in drug_spending[2011].index.values]\n",
     "drug_spending[2011][all_omeprazoles][['claim_count', 'total_spending']].dropna().sort_values(by='claim_count', ascending=False)"
    ]
@@ -295,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
