Add drug names to annual data feather files (#3)
* Fix gitignore to ignore XLSX/ZIP and move CMS data to its own dir

* Add drug names back into annual spending data, for ease of use

* Forgot to add notebook in last commit

* Fix exploration notebook after earlier changes

--- a/cms/part-d_convert_to_feather.ipynb
+++ b/cms/part-d_convert_to_feather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -10,10 +10,10 @@
     {
      "data": {
       "text/plain": [
-       "'data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
+       "'../data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,19 +26,21 @@
     "import shutil # to write the dataset to file\n",
     "import os # rename file to something more type-able\n",
     "\n",
+    "data_dir = '../data/'\n",
+    "\n",
     "url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Information-on-Prescription-Drugs/Downloads/Part_D_All_Drugs_2015.zip'\n",
     "response = requests.get(url, stream=True)\n",
-    "with open('data/dataset.zip', 'wb') as ds_zipout:\n",
+    "with open(data_dir + 'dataset.zip', 'wb') as ds_zipout:\n",
     "    shutil.copyfileobj(response.raw, ds_zipout)\n",
     "\n",
-    "zip = zipfile.ZipFile('data/dataset.zip', 'r')\n",
+    "zip = zipfile.ZipFile(data_dir + 'dataset.zip', 'r')\n",
     "ds_filename = zip.namelist()[0]\n",
-    "zip.extract(ds_filename, path=\"data/\")"
+    "zip.extract(ds_filename, path=data_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -46,13 +48,13 @@
    "source": [
     "# Read in the raw data file and focus only on the sheet with the data in it\n",
     "from openpyxl import load_workbook\n",
-    "workbook = load_workbook(\"data/\" + ds_filename)\n",
+    "workbook = load_workbook(data_dir + ds_filename)\n",
     "data_sheet = workbook['Data']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -2318,7 +2320,7 @@
        "[4498 rows x 53 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2337,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -2353,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -2361,12 +2363,12 @@
    "source": [
     "# Serialize drug names to feather file for use in both Python and R\n",
     "import feather\n",
-    "feather.write_dataframe(df_drugnames, 'data/drugnames.feather')"
+    "feather.write_dataframe(df_drugnames, data_dir + 'drugnames.feather')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -2381,12 +2383,24 @@
     "    { 'year': 2015, 'start': 42, 'end': 53 },\n",
     "]\n",
     "\n",
-    "df_years = { cols['year']: df.iloc[:, cols['start']:cols['end']] for cols in cols_by_year }"
+    "df_years = {}\n",
+    "\n",
+    "col_brandname = 0\n",
+    "col_genericname = 1\n",
+    "for cols in cols_by_year:\n",
+    "    year, start, end = cols['year'], cols['start'], cols['end']\n",
+    "    \n",
+    "    df_years[year] = pd.concat(\n",
+    "        [\n",
+    "            df.iloc[:, [col_brandname, col_genericname]],\n",
+    "            df.iloc[:, start:end]\n",
+    "        ],\n",
+    "        axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -2398,7 +2412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Drop any rows in each year that have absolutely no data, then reset their row indices\n",
+    "for year in df_years:\n",
+    "    nonnull_rows = df_years[year].iloc[:, 2:].apply(lambda x: x.notnull().any(), axis=1)\n",
+    "    df_years[year] = df_years[year][nonnull_rows]\n",
+    "    df_years[year].index = np.arange(1, len(df_years[year]) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -2406,6 +2435,8 @@
    "source": [
     "# Make columns easier to type and more generic w.r.t. year\n",
     "generic_columns = [\n",
+    "    \"drugname_brand\",\n",
+    "    \"drugname_generic\",\n",
     "    \"claim_count\",\n",
     "    \"total_spending\",\n",
     "    \"user_count\",\n",
@@ -2424,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -2436,14 +2467,15 @@
     "# tripping on the fact that we have a dict of DataFrames\n",
     "pd.options.mode.chained_assignment = None\n",
     "for year in df_years:\n",
-    "    for col in df_years[year].columns:\n",
+    "    # Ignore the first two columns, which are strings and contain drug names\n",
+    "    for col in df_years[year].columns[2:]:\n",
     "        df_years[year].loc[:, col] = pd.to_numeric(df_years[year][col])\n",
     "pd.options.mode.chained_assignment = 'warn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -2451,7 +2483,7 @@
    "source": [
     "# Serialize data for each year to feather file for use in both Python and R\n",
     "for year in df_years:\n",
-    "    feather.write_dataframe(df_years[year], 'data/spending-' + str(year) + '.feather')"
+    "    feather.write_dataframe(df_years[year], data_dir + 'spending-' + str(year) + '.feather')"
    ]
   }
  ],
@@ -2471,7 +2503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
