--- a/cms/part-d_convert_to_feather.ipynb
+++ b/cms/part-d_convert_to_feather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
        "'../data/Medicare_Drug_Spending_PartD_All_Drugs_YTD_2015_12_06_2016.xlsx'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,6 +30,8 @@
     "\n",
     "url = 'https://www.cms.gov/Research-Statistics-Data-and-Systems/Statistics-Trends-and-Reports/Information-on-Prescription-Drugs/Downloads/Part_D_All_Drugs_2015.zip'\n",
     "response = requests.get(url, stream=True)\n",
+    "\n",
+    "os.mkdir(data_dir)\n",
     "with open(data_dir + 'dataset.zip', 'wb') as ds_zipout:\n",
     "    shutil.copyfileobj(response.raw, ds_zipout)\n",
     "\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2320,7 +2322,7 @@
        "[4498 rows x 53 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2339,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2355,7 +2357,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matt/projects/d4d/drug-spending/.env/lib/python3.6/site-packages/pandas/core/indexing.py:561: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item_labels[indexer[info_axis]]] = value\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Strip extraneous whitespace from drug names\n",
+    "df_drugnames.loc[:, 'drugname_brand'] = df_drugnames.loc[:, 'drugname_brand'].map(lambda x: x.strip())\n",
+    "df_drugnames.loc[:, 'drugname_generic'] = df_drugnames.loc[:, 'drugname_generic'].map(lambda x: x.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -2368,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -2392,7 +2420,7 @@
     "    \n",
     "    df_years[year] = pd.concat(\n",
     "        [\n",
-    "            df.iloc[:, [col_brandname, col_genericname]],\n",
+    "            df_drugnames,\n",
     "            df.iloc[:, start:end]\n",
     "        ],\n",
     "        axis=1)"
@@ -2400,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2412,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2427,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -2455,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -2475,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
