pharma lobby analysis

--- a/python/timeseries_analysis/pharma_lobby_investigate_gtp_040117.ipynb
+++ b/python/timeseries_analysis/pharma_lobby_investigate_gtp_040117.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Notes 4-1-17\n",
-    "- make drug spending on Medicare make sense to the lay-person\n",
-    "- make this user friendly for anyone to check out and see what's being spent where"
+    "### Pharmacutical Company / Lobby Relationship\n",
+    "\n",
+    "- this notebook is supposed to look at the relationship between the amount of Medicare money a pharmacutical company receives in a year compared to the total expenditure on lobbying by that company (datasets are merged by a sort of fuzzy string matching --- I really only looked at the top 10 or 15 pharmacutical companies as well, I didn't quite have time to look at and try to match every single one) All data taken from https://data.world/data4democracy/drug-spending\n",
+    "\n",
+    "- coding done by Geoff Perrin (https://github.com/gperrin12) during the Data4Democracy Hackathon, 4-1-17"
    ]
   },
   {
