pharma lobby analysis

--- a/python/timeseries_analysis/pharma_lobby_investigate_gtp_040117.ipynb
+++ b/python/timeseries_analysis/pharma_lobby_investigate_gtp_040117.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "- this notebook is supposed to look at the relationship between the amount of Medicare money a pharmacutical company receives in a year compared to the total expenditure on lobbying by that company (datasets are merged by a sort of fuzzy string matching --- I really only looked at the top 10 or 15 pharmacutical companies as well, I didn't quite have time to look at and try to match every single one) All data taken from https://data.world/data4democracy/drug-spending\n",
     "\n",
+    "- at the end, I sort of conclude that there really isn't a significant relationship between medicare income and lobbying expenditures, but this could just be due to a small sample size (I only look at four years (2011-2014) and a handful of pharmacutical companies). With more time and a larger data set, stronger relationships could possibly be made.\n",
+    "\n",
     "- coding done by Geoff Perrin (https://github.com/gperrin12) during the Data4Democracy Hackathon, 4-1-17"
    ]
   },
