make R project, minor updates to EDA

--- a/R/analysis-vis/EDA_top100.rmd
+++ b/R/analysis-vis/EDA_top100.rmd
@@ -10,13 +10,18 @@ output:
 ---
 
 
-## Introduction
+# Introduction
+- This notebook contains some explroatory data analysis of the *spending_all_top100.csv* data
+- Part of the d4d *drug_spending* project: <https://github.com/Data4Democracy/drug-spending>
+- Notebook modified from the automatically generated notebook for the `drug-spending` dataset found at: https://data.world/data4democracy/drug-spending, showcasing the use of the `data.world` R package. * Learn more at https://github.com/datadotworld/data.world-r
 
-Modified from the automatically generated notebook for the `drug-spending` dataset found at: 
-https://data.world/data4democracy/drug-spending, showcasing the use of the `data.world` R package. * Learn more at https://github.com/datadotworld/data.world-r
+# TO-DO
+- Fit linear regression vs year to each generic, see which ones are rising the most.
+- Look at price per user, not just total price.
+- Look at number of users, number of low-income users, etc.
 
 
-### Load packages
+## Load packages
 ```{r}
 library(data.world)
 suppressPackageStartupMessages(library(dplyr))
@@ -25,7 +30,7 @@ library(tibble)
 ```
 
 
-### List all tables in the **drug-spending** dataset:
+## List all tables in the **drug-spending** dataset:
 ```{r list tables}
 # Datasets are referenced by their URL or path
 dataset_key <- "https://data.world/data4democracy/drug-spending"
@@ -55,7 +60,7 @@ print( paste('Out of ',nrow(spend_df),' rows, there are ',length(unique(spend_df
 
 
 
-### Which generics had largest total spending (for an inidivdual year) ? 
+## Which generics had largest total spending (for an inidivdual year) ? 
 
 ```{r}
 spend_df %>% 
@@ -64,7 +69,7 @@ spend_df %>%
         head(20)
 ```
 
-### Which generics had largest total spending over all 5 years?
+## Which generics had largest total spending over all 5 years?
 ```{r}
 spend_df %>% 
         group_by(drugname_generic) %>%
@@ -76,7 +81,7 @@ spend_df %>%
 
 
 
-### Try plotting total spending by year
+## Try plotting total spending by year
 ```{r}
 spend_df %>%
         group_by(year) %>%
@@ -89,7 +94,7 @@ spend_df %>%
 
 
 
-### Which generic had largest difference in spending from 2011-2015 ?
+## Which generic had largest difference in spending from 2011-2015 ?
 - First group by generic and get yearly totals
 ```{r}
 df_yearly <- spend_df %>%
@@ -108,11 +113,5 @@ df_yearly %>%
 ```
 
 
-###
 
-
-## TO-DO
-- Fit linear regression vs year to each generic, see which ones are rising the most.
-- Look at price per user, not just total price.
-- Look at number of users, number of low-income users, etc.
 
